web ui cost module: - double click cost cell to enable editing cost values. - fix tables' height / scrollbar behaviour

--- a/src/bonsai/bonsai/bim/data/webui/static/css/components/headerBar.css
+++ b/src/bonsai/bonsai/bim/data/webui/static/css/components/headerBar.css
@@ -3,6 +3,8 @@
   gap: 10px;
   margin-bottom: 20px;
   border: 1px solid #444;
+  width: 100%;
+  justify-content: center;
 }
 
 .ribbon-bar .action-button {
